Porting ArcGrid refactoring from trunk
git-svn-id: https://svn.java.net/svn/imageio-ext~svn/branches/1.0.x@1106 866bbf7d-4862-ccf5-812a-c90ffd63a74d